--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Practica 1</title>
+  <title> Manipulcion del DOM basica</title>
 </head>
 
 <body>
-  <script src="/index.js">
+  <h1>Manipulacion basica del DOM</h1>
+  <script src="./index.js">
   </script>
+
+  <p>Esto es un parrafo</p>
+  <p class="parrafito">Esto es un parrafo con clase</p>
+  <p id="pid">Esto es un parrafo con clase</p>
+  <input placeholder="Escribe algo aqui">
 </body>
 
 </html>
