--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Manipulcion del DOM basica</title>
+  <title> Manipulacion del DOM basica</title>
 </head>
 
 <body>
-  <h1>Manipulacion basica del DOM</h1>
-  <script src="./index.js">
-  </script>
-
+  <h1 class="verde">Manipulacion basica del DOM</h1>
+  <h2>Manipulacion basica del DOM</h2>
   <p>Esto es un parrafo</p>
   <p class="parrafito">Esto es un parrafo con clase</p>
   <p id="pid">Esto es un parrafo con clase</p>
   <input placeholder="Escribe algo aqui">
+  <script src="./index.js"></script>
 </body>
 
 </html>
